--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Poppins:wght@500;600;700&display=swap"
         rel="stylesheet">
+    <!-- --FontAwesome--  -->
+    <script src="https://kit.fontawesome.com/a559834955.js" crossorigin="anonymous"></script>
+    <!-- -- Iconify ---  -->
+    <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
     <!-- Main CSS  -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Responsive CSS  -->
@@ -20,11 +24,66 @@
 </head>
 
 <header>
-    <section>
-        .container-lg
+    <section class="header-navigation">
+        <div class="container-lg">
+            <!-- .desktop menu  -->
+            <div class="desktop-menu">
+                <div class="header-area">
+                    <div class="logo-nav">
+                        <div class="site-logo">
+                            <h1 class="text-logo">Influencer products</h1>
+                        </div>
+                    </div>
+                    <div class="menu-cart">
+                        <nav class="menu-area">
+                            <ul class="priamry-menu">
+                                <li class="menu-item"><a href="#" class="nav-links">Home</a></li>
+                                <li class="menu-item"><a href="#" class="nav-links">Products</a></li>
+                                <li class="menu-item"><a href="#" class="nav-links">Signup</a></li>
+                                <li class="menu-item"><a href="#" class="nav-links">Login</a></li>
+                            </ul>
+
+                        </nav>
+                        <div class="search">
+                            <span class="iconify" data-icon="akar-icons:search"></span>
+                        </div>
+                        <div class="cart">
+                            <span class="iconify" data-icon="clarity:shopping-cart-outline-badged"></span>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- mobile manu  -->
+            <div class="mobile-menu">
+                <div class="header-area">
+                    <div class="humbrger-menu">
+                        <div class="icon">
+                            <span class="iconify" data-icon="bytesize:menu"></span>
+                        </div>
+
+                    </div>
+                    <div class="site-logo">
+                        <h1 class="text-logo">Influencer products</h1>
+                    </div>
+                    <div class="cart">
+                        <span class="iconify" data-icon="clarity:shopping-cart-outline-badged"></span>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </section>
+
+
 </header>
 <main>
+    <section id="hero">
+        <div class="container-lg">
+            
+        </div>
+    </section>
 
 </main>
 <footer>
