--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
                         </nav>
                         <div class="search">
-                            <span class="iconify" data-icon="akar-icons:search"></span>
+                            <span class="iconify-inline" data-icon="akar-icons:search"></span>
                         </div>
                         <div class="cart">
-                            <span class="iconify" data-icon="clarity:shopping-cart-outline-badged"></span>
+                            <span class="iconify-inline" data-icon="clarity:shopping-cart-outline-badged"></span>
                         </div>
                     </div>
 
@@ -80,14 +80,301 @@
 </header>
 <main>
     <section id="hero">
-        <div class="container-lg">
-            
+        <div class="container-lg py50px">
+            <div class="flex align-item-center">
+                <div class="content">
+                    <h1 class="title">Start your Journey as
+                        Influencer</h1>
+                    <div class="pt15"></div>
+                    <h5 class="subtittle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed
+                        scelerisque eros. Lectus faucibus.</h5>
+                    <div class="pt30"></div>
+                    <a href="/" class="btn btn-primary">Preorder Now <span class="iconify-inline btn-icon"
+                            data-icon="akar-icons:arrow-right"></span></a>
+                </div>
+                <div class="hero-image">
+                    <div class="relative animated-featured-image">
+                        <img src="images/Circle design.svg" alt="" class="image-bg">
+                        <img class="camera" src="images/main-camera.png" alt="" srcset="">
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <section id="clients">
+        <div class="container-md py50px">
+            <div class="border"></div>
+            <div class="client-logo-wrapper">
+                <div class="flex">
+                    <div class="client alibaba"><img src="images/logos/Alibaba.svg" alt=""></div>
+                    <div class="client amazon"><img src="images/logos/Amazon.svg" alt=""></div>
+                    <div class="client daraz"><img src="images/logos/Daraz.pk-Logo.svg" alt=""></div>
+                    <div class="client ebay"><img src="images/logos/Ebay.svg" alt=""></div>
+                    <div class="client rakuten"><img src="images/logos/Rakuten.svg" alt=""></div>
+                    <div class="client target"><img src="images/logos/Target.svg" alt=""></div>
+                    <div class="client walmart"><img src="images/logos/Walmart.svg" alt=""></div>
+                </div>
+            </div>
+            <div class="border"></div>
         </div>
     </section>
 
+
+    <section id="popular">
+        <div class="container py50px">
+            <h2 class="text-center section-heading">Popular Collection</h2>
+            <div class="pt30"></div>
+            <div class="product-grid">
+                <!-- -------- PRODUCT -----  -->
+                <div class="product-wrapper">
+                    <div class="product-content">
+                        <div class="image">
+                            <img src="images/tripod.png" alt="product image">
+                        </div>
+                        <h2 class="product-title">Flex Tripod</h2>
+
+                        <h2 class="price">$50.48</h2>
+                        <span class="ratings">
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                        </span>
+                        <span class="rating-count">
+                            4.99
+                        </span>
+                        <p class="product-disc">
+                            Wordwide shifting available
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <!-- ------------------------------- -->
+                <!-- -------- PRODUCT -----  -->
+                <div class="product-wrapper">
+                    <div class="product-content">
+                        <div class="image">
+                            <img src="images/tripod.png" alt="product image">
+                        </div>
+                        <h2 class="product-title">Flex Tripod</h2>
+                        <h2 class="price">$50.48</h2>
+                        <span class="ratings">
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                        </span>
+                        <span class="rating-count">
+                            4.99
+                        </span>
+                        <p class="product-disc">
+                            Wordwide shifting available
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <!-- ------------------------------- -->
+                <!-- -------- PRODUCT -----  -->
+                <div class="product-wrapper">
+                    <div class="product-content">
+                        <div class="image">
+                            <img src="images/tripod.png" alt="product image">
+                        </div>
+                        <h2 class="product-title">Flex Tripod</h2>
+                        <h2 class="price">$50.48</h2>
+                        <span class="ratings">
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                        </span>
+                        <span class="rating-count">
+                            4.99
+                        </span>
+                        <p class="product-disc">
+                            Wordwide shifting available
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <!-- ------------------------------- -->
+                <!-- -------- PRODUCT -----  -->
+                <div class="product-wrapper">
+                    <div class="product-content">
+                        <div class="image">
+                            <img src="images/tripod.png" alt="product image">
+                        </div>
+                        <h2 class="product-title">Flex Tripod</h2>
+                        <h2 class="price">$50.48</h2>
+                        <span class="ratings">
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                        </span>
+                        <span class="rating-count">
+                            4.99
+                        </span>
+                        <p class="product-disc">
+                            Wordwide shifting available
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <!-- ------------------------------- -->
+                <!-- -------- PRODUCT -----  -->
+                <div class="product-wrapper">
+                    <div class="product-content">
+                        <div class="image">
+                            <img src="images/tripod.png" alt="product image">
+                        </div>
+                        <h2 class="product-title">Flex Tripod</h2>
+                        <h2 class="price">$50.48</h2>
+                        <span class="ratings">
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                        </span>
+                        <span class="rating-count">
+                            4.99
+                        </span>
+                        <p class="product-disc">
+                            Wordwide shifting available
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <!-- ------------------------------- -->
+                <!-- -------- PRODUCT -----  -->
+                <div class="product-wrapper">
+                    <div class="product-content">
+                        <div class="image">
+                            <img src="images/tripod.png" alt="product image">
+                        </div>
+                        <h2 class="product-title">Flex Tripod</h2>
+                        <h2 class="price">$50.48</h2>
+                        <span class="ratings">
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                        </span>
+                        <span class="rating-count">
+                            4.99
+                        </span>
+                        <p class="product-disc">
+                            Wordwide shifting available
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <!-- ------------------------------- -->
+                <!-- -------- PRODUCT -----  -->
+                <div class="product-wrapper">
+                    <div class="product-content">
+                        <div class="image">
+                            <img src="images/tripod.png" alt="product image">
+                        </div>
+                        <h2 class="product-title">Flex Tripod</h2>
+                        <h2 class="price">$50.48</h2>
+                        <span class="ratings">
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                        </span>
+                        <span class="rating-count">
+                            4.99
+                        </span>
+                        <p class="product-disc">
+                            Wordwide shifting available
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <!-- ------------------------------- -->
+                <!-- -------- PRODUCT -----  -->
+                <div class="product-wrapper">
+                    <div class="product-content">
+                        <div class="image">
+                            <img src="images/tripod.png" alt="product image">
+                        </div>
+                        <h2 class="product-title">Flex Tripod</h2>
+                        <h2 class="price">$50.48</h2>
+                        <span class="ratings">
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                        </span>
+                        <span class="rating-count">
+                            4.99
+                        </span>
+                        <p class="product-disc">
+                            Wordwide shifting available
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <!-- ------------------------------- -->
+                <!-- -------- PRODUCT -----  -->
+                <div class="product-wrapper">
+                    <div class="product-content">
+                        <div class="image">
+                            <img src="images/tripod.png" alt="product image">
+                        </div>
+                        <h2 class="product-title">Flex Tripod</h2>
+                        <h2 class="price">$50.48</h2>
+                        <span class="ratings">
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                            <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
+                        </span>
+                        <span class="rating-count">
+                            4.99
+                        </span>
+                        <p class="product-disc">
+                            Wordwide shifting available
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <!-- ------------------------------- -->
+            </div>
+            <div class="text-right">
+                <div class="pt30"></div>
+                <a href="/" class="btn btn-secondery">Preorder Now <span class="iconify-inline btn-icon"
+                        data-icon="akar-icons:arrow-right"></span></a>
+            </div>
+        </div>
+    </section>
 </main>
 <footer>
+    <div class="footer-container text-center py50px">
+        <h2 class="footer-title">Influencer products</h2>
+        <div class="pt15"></div>
+        <p class="footer-text">Copyright © 2020  influencer products <br> All rights reserved</p>
+        <div class="pt30"></div>
+        <div class="social-icons">
+            <span class="iconify-inline" data-icon="akar-icons:instagram-fill"></span>
+            <span class="iconify-inline" data-icon="icon-park-outline:dribble"></span>
+            <span class="iconify-inline" data-icon="akar-icons:twitter-fill"></span>
+            <span class="iconify-inline" data-icon="akar-icons:youtube-fill"></span>
+        </div>
 
+    </div>
 </footer>
 
 <body>
