added extra section

--- a/index.html
+++ b/index.html
@@ -360,12 +360,38 @@
             </div>
         </div>
     </section>
+
+    <section id="call-to-action">
+        <div class="container  py50px">
+            <div class="cta-container">
+                <div class="image-box">
+                    <img src="images/promo.jpg" alt="" srcset="">
+                </div>
+                <div class="content">
+                    <div class="">
+                        <h1 class="title">Subscribe and Get 50%  Discount</h1>
+                        <div class="pt15"></div>
+                        <h5 class="subtittle">Subscribe to our nwesletter today and enjoy 50% discount on first Order<br> So dont be late and subscribe now</h5>
+                        <div class="pt30"></div>
+                        <form action="" method="post">
+                            <input type="text" placeholder="Email Address" class="form-input">
+                            
+                            <button class="btn btn-primary" type="submit"> Subscribe now<span class="iconify-inline btn-icon"
+                                data-icon="akar-icons:arrow-right"></button>
+                        </form>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </section>
 </main>
 <footer>
     <div class="footer-container text-center py50px">
         <h2 class="footer-title">Influencer products</h2>
         <div class="pt15"></div>
-        <p class="footer-text">Copyright © 2020  influencer products <br> All rights reserved</p>
+        <p class="footer-text">Copyright © 2020 influencer products <br> All rights reserved</p>
         <div class="pt30"></div>
         <div class="social-icons">
             <span class="iconify-inline" data-icon="akar-icons:instagram-fill"></span>
