--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         </div>
     </section>
 
-    <section id="call-to-action">
+    <section style="display: none;" id="call-to-action">
         <div class="container  py50px">
             <div class="cta-container">
                 <div class="image-box">
