--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
                 <div class="product-wrapper">
                     <div class="product-content">
                         <div class="image">
-                            <img src="images/tripod.png" alt="product image">
+                            <img src="images/mic.png" alt="product image">
                         </div>
-                        <h2 class="product-title">Flex Tripod</h2>
-                        <h2 class="price">$50.48</h2>
+                        <h2 class="product-title">Microphone</h2>
+                        <h2 class="price">$120.25</h2>
                         <span class="ratings">
                             <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
                             <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
@@ -184,10 +184,10 @@
                 <div class="product-wrapper">
                     <div class="product-content">
                         <div class="image">
-                            <img src="images/tripod.png" alt="product image">
+                            <img src="images/airpod.png" alt="product image">
                         </div>
-                        <h2 class="product-title">Flex Tripod</h2>
-                        <h2 class="price">$50.48</h2>
+                        <h2 class="product-title">Airbuds</h2>
+                        <h2 class="price">$100.00</h2>
                         <span class="ratings">
                             <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
                             <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
@@ -209,10 +209,10 @@
                 <div class="product-wrapper">
                     <div class="product-content">
                         <div class="image">
-                            <img src="images/tripod.png" alt="product image">
+                            <img src="images/drone.png" alt="product image">
                         </div>
-                        <h2 class="product-title">Flex Tripod</h2>
-                        <h2 class="price">$50.48</h2>
+                        <h2 class="product-title">Drone</h2>
+                        <h2 class="price">$980.25</h2>
                         <span class="ratings">
                             <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
                             <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
@@ -234,10 +234,10 @@
                 <div class="product-wrapper">
                     <div class="product-content">
                         <div class="image">
-                            <img src="images/tripod.png" alt="product image">
+                            <img src="images/lights.png" alt="product image">
                         </div>
-                        <h2 class="product-title">Flex Tripod</h2>
-                        <h2 class="price">$50.48</h2>
+                        <h2 class="product-title">Light Setup</h2>
+                        <h2 class="price">$1200.00</h2>
                         <span class="ratings">
                             <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
                             <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
@@ -259,10 +259,10 @@
                 <div class="product-wrapper">
                     <div class="product-content">
                         <div class="image">
-                            <img src="images/tripod.png" alt="product image">
+                            <img src="images/setup.png" alt="product image">
                         </div>
-                        <h2 class="product-title">Flex Tripod</h2>
-                        <h2 class="price">$50.48</h2>
+                        <h2 class="product-title">Photoshoot set</h2>
+                        <h2 class="price">$820.40</h2>
                         <span class="ratings">
                             <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
                             <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
@@ -284,10 +284,10 @@
                 <div class="product-wrapper">
                     <div class="product-content">
                         <div class="image">
-                            <img src="images/tripod.png" alt="product image">
+                            <img src="images/camera.png" alt="product image">
                         </div>
-                        <h2 class="product-title">Flex Tripod</h2>
-                        <h2 class="price">$50.48</h2>
+                        <h2 class="product-title">Vlogging Camera</h2>
+                        <h2 class="price">$1800.80</h2>
                         <span class="ratings">
                             <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
                             <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
@@ -309,10 +309,10 @@
                 <div class="product-wrapper">
                     <div class="product-content">
                         <div class="image">
-                            <img src="images/tripod.png" alt="product image">
+                            <img src="images/single-light.png" alt="product image">
                         </div>
-                        <h2 class="product-title">Flex Tripod</h2>
-                        <h2 class="price">$50.48</h2>
+                        <h2 class="product-title">Green Screen</h2>
+                        <h2 class="price">$25.48</h2>
                         <span class="ratings">
                             <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
                             <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
@@ -334,10 +334,10 @@
                 <div class="product-wrapper">
                     <div class="product-content">
                         <div class="image">
-                            <img src="images/tripod.png" alt="product image">
+                            <img src="images/action.png" alt="product image">
                         </div>
-                        <h2 class="product-title">Flex Tripod</h2>
-                        <h2 class="price">$50.48</h2>
+                        <h2 class="product-title">Action Camera</h2>
+                        <h2 class="price">$380.00</h2>
                         <span class="ratings">
                             <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
                             <span class="iconify-inline" data-icon="ant-design:star-filled"></span>
@@ -378,9 +378,9 @@
                             Order<br> So dont be late and subscribe now</h5>
                         <div class="pt30"></div>
                         <form action="" method="post">
-                            <input type="text" placeholder="Email Address" class="form-input">
+                            <input type="text" placeholder="Email Address" class="form-input form-controller">
 
-                            <button class="btn btn-primary" type="submit"> Subscribe now<span
+                            <button class="btn btn-primary form-controller" type="submit"> Subscribe now<span
                                     class="iconify-inline btn-icon" data-icon="akar-icons:arrow-right"></button>
                         </form>
                     </div>
@@ -395,7 +395,7 @@
     <div class="footer-container text-center py50px">
         <h2 class="footer-title">Influencer products</h2>
         <div class="pt15"></div>
-        <p class="footer-text">Copyright © 2020 influencer products <br> All rights reserved</p>
+        <p class="footer-text">Copyright &copy; 2020 influencer products <br> All rights reserved</p>
         <div class="pt30"></div>
         <div class="social-icons">
             <a href="/"><span class="iconify-inline" data-icon="akar-icons:instagram-fill"></span></a>
